# ccmux

./: Cargo.toml  LICENSE  README.md  ccmux.tmux  check-overhead.sh
.superpowers/brainstorm/30350-1777812326/content/: architecture.html  names.html  sidebar-layout.html
.superpowers/brainstorm/30350-1777812326/state/: server-stopped
.superpowers/brainstorm/5046-1777805794/content/: names.html
.superpowers/brainstorm/5046-1777805794/state/: server-stopped
docs/: tmux-setup.md
docs/superpowers/plans/: 2026-04-27-ccmux-implementation.md
docs/superpowers/specs/: 2026-04-27-ccmux-design.md  2026-05-03-ccmux-design.md
helpers/: install-notify-helper.sh
helpers/ccmux-notify/: Info.plist  main.swift
src/: config.rs  control.rs  detection.rs  git.rs  gitstatus.rs  history.rs  hookstate.rs  input.rs  jobs.rs  main.rs  notify.rs  session.rs  tmux.rs
src/app/: helpers.rs  mod.rs  mode.rs
src/git/: worktree.rs
src/sidebar/: hostmem.rs  input.rs  mod.rs  mode.rs  render.rs
src/tmux/: detect.rs  mod.rs  state.rs  windows.rs
src/ui/: dialogs.rs  help.rs  mod.rs
src/workflow/: worktree.rs
