[package]
name = "ccmux"
version = "0.1.0"
edition = "2021"
description = "tmux sidebar for managing Claude Code sessions"
license = "AGPL-3.0-only"

[[bin]]
name = "ccmux"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
dirs = "5.0"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
